--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Hi there!
                </div>-->
             </div>
             <br>
-            <a href="#" class="btn">DOWNLOAD CV</a>
+            <a href="CV.pdf" target="blank" class="btn">DOWNLOAD CV</a>
          </div>
       </section>
       <br><br>
